--- a/src/cn/coselding/myblog/email/MailServer.properties
+++ b/src/cn/coselding/myblog/email/MailServer.properties
@@ -7,6 +7,6 @@ mail.smtp.auth=true
 #--------------------------------------------------------------
 
 #\u53D1\u9001\u8005\u7684\u90AE\u7BB1\u7528\u6237\u540D
-mail.sender.username=postmaster@coselding.cn
+mail.sender.username=******
 #\u53D1\u9001\u8005\u7684\u90AE\u7BB1\u5BC6\u7801
-mail.sender.password=52XuZiyao1314
+mail.sender.password=******
